Fix(locating canvas):     change "align-content" to "align-items" to canter it vertically in styles.css
Feat(resize canvas):
    Implement resetDisplay() in game.js

--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,10 @@ html, body {
 
 body {
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
 }
 
 canvas {
-    width: 100%;
-    height: 100%;
+    background-color: black;
 }
